force-app/main/default/objects/blng__BillingSchedule__c/blng__BillingSchedule__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule</label>
    <nameField>
        <label>Billing Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>