force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__BilledAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__BilledAmount__c</fullName>
    <label>Billed Amount</label>
    <summarizedField>blng__BillingTransaction__c.blng__AmountToBeBilled__c</summarizedField>
    <summaryFilterItems>
        <field>blng__BillingTransaction__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Billed</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>