force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__InvoicePlan__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoicePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Plan</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedulesInvoicePlan</relationshipName>
    <type>Lookup</type>
</CustomField>