force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__NumberOfBilledBillingTransactions__c.field-meta.xml
<CustomField>
    <fullName>blng__NumberOfBilledBillingTransactions__c</fullName>
    <label>Number of Billed Billing Transactions</label>
    <summaryFilterItems>
        <field>blng__BillingTransaction__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Billed</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>