force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__NumberOfCanceledBillingTransactions__c.field-meta.xml
<CustomField>
    <fullName>blng__NumberOfCanceledBillingTransactions__c</fullName>
    <label>Number of Canceled Billing Transactions</label>
    <summaryFilterItems>
        <field>blng__BillingTransaction__c.blng__CalculatedStatus__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>