force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__Source__c.field-meta.xml
<CustomField>
    <fullName>blng__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__Source</valueSetName>
    </valueSet>
</CustomField>