force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <formula>IF(blng__BilledAmount__c == blng__Amount__c, &quot;Billed&quot;, 
  IF((blng__NumberOfBillingTransactions__c != 0 &amp;&amp; blng__NumberOfBillingTransactions__c = blng__NumberOfCanceledBillingTransactions__c), &quot;Cancelled&quot;, &quot;Pending&quot;)
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>