force-app/main/default/objects/blng__BillingSchedule__c/fields/blng__TaxStreet__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStreet__c</fullName>
    <label>Tax Street 1 (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>